feat(order): add RestTemplate bean configuration